feat:-> added Stripe payment gateway for tranfers during the payrun

--- a/api/env.sample
+++ b/api/env.sample
@@ -11,4 +11,4 @@ CURRENT_ACCESS_KEY_ID=<your-access-key-id>
 CURRENT_SECRET_ACCESS_KEY=<your-secret-access-key>
 CURRENT_REGION=ap-southeast-2
 BUCKET_NAME=payroo
-
+STRIPE_SECRET_KEY=sk_test....
